# twg-telegram

./: .gitignore  README.md  config.py  env_config.py  example.env  main.py  pyproject.toml  utils.py
backend_api/: auth.py  exceptions.py  models.py  utils.py
backend_api/handlers/: tags.py  travel.py
bot/: README.md  __init__.py  keyboards.py  models.py  utils.py
bot/fsm/: callbacks.py  states.py
bot/handlers/: __init__.py  commands.py  tours.py
bot/keyboards/: command_kbs.py  tours_kbs.py
templates/: start.html  tags.html
