[tool.poetry]
name = "twg-bot"
version = "0.1.0"
description = ""
authors = ["olshanskyvv <90987935+olshanskyvv@users.noreply.github.com>"]
readme = "README.md"
packages = [{include = "../twg_telegram"}]

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.111.0"
uvicorn = "^0.30.1"
aiogram = "^3.7.0"
redis = "^5.0.5"
jinja2 = "^3.1.4"
poetry-plugin-dotenv = "^2.1.6"

[tool.poetry.plugins.dotenv]
ignore = "false"
location = ".env"

[tool.poetry.scripts]
start = 'main:main'

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


